fixed text overflow issues

--- a/src/components/list-item/list-item.style.scss
+++ b/src/components/list-item/list-item.style.scss
@@ -21,7 +21,7 @@
     width: 100%;
     color: black;
     font-size: 12px;
-    word-break: break-word;
+    word-break: break-all;
     overflow: hidden;
     white-space: normal;
     display: -webkit-box;
@@ -42,7 +42,7 @@
       .listitem-type-text {
         font-size: 12px;
         color: var(--gray-med);
-        word-break: break-word;
+        word-break: break-all;
         overflow: hidden;
         white-space: normal;
         display: -webkit-box;
